[gd_scene load_steps=2 format=3 uid="uid://c5eslbong5kuh"]

[ext_resource type="Script" path="res://prog_93a.gd" id="1_ek3hq"]

[node name="Prog_93a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ek3hq")

[node name="Calculatebtn" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 109.0
offset_right = 96.0
offset_bottom = 140.0
text = "Calculate"

[node name="Clearbtn" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 150.0
offset_right = 95.0
offset_bottom = 181.0
text = "Clear"

[node name="Exitbtn" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 189.0
offset_right = 95.0
offset_bottom = 220.0
text = "Exit"

[node name="Bigmanoutput" type="Label" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 118.0
offset_right = 299.0
offset_bottom = 267.0

[node name="kilowattlbl" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 71.0
offset_right = 127.0
offset_bottom = 100.0
text = "Kilowatts:"

[node name="Kilowatts" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 68.0
offset_right = 202.063
offset_bottom = 99.0

[connection signal="pressed" from="Calculatebtn" to="." method="_on_calculatebtn_pressed"]
[connection signal="pressed" from="Clearbtn" to="." method="_on_clearbtn_pressed"]
[connection signal="pressed" from="Exitbtn" to="." method="_on_exitbtn_pressed"]
